Nav JS Fixed: Touched nav.js and fixed the scrolling behavior for the top nav.  Still need to adjust the left collapse/expand behavior.

--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -64,7 +64,7 @@ $font-stack: 'UniversLight', 'Univers', sans-serif;
 @media screen and (max-width: 768px) { /*phones*/
 	.topBanner {
 		height: 80px !important;
-		img.topAd { width: 100%; }
+		img.topAd { max-height: 50px; }
 	}
 	#primaryNav {
 		height: auto !important;
@@ -86,6 +86,11 @@ $font-stack: 'UniversLight', 'Univers', sans-serif;
 }
 @media screen and (max-width: 640px) { 
 	.btn-primary { width: 260px !important; }
+}
+@media screen and (max-width: 490px) { 
+	.topBanner {
+		img.topAd { width: 100%; }
+	}
 }
 /*****************************GENERAL CSS********************************/
 body { 
@@ -129,8 +134,8 @@ ul.most {
 	}
 }
 .btn-primary { background: $red; border: none; width: 300px; height: 60px; max-width: 512px; margin-bottom: 10px !important; font-size: 1.15em; padding-top: 20px; }
-.navbar-default {
-	background: $red; font-size: 1.3em; border-bottom: none; margin-top: 100px;
+.navbar {
+	background: $red; font-size: 1.3em; border-bottom: none; margin-top: 0;
 	font-family: 'UniversLight', 'Univers'; letter-spacing: 0;
 	a { color: white !important; text-shadow: none !important; }
 }
